buildscript {
    repositories { mavenCentral() }
}

plugins {
    id 'java'
    id 'java-library'
    id 'io.spring.dependency-management' version '1.0.8.RELEASE'

    id "net.ltgt.apt" version "0.21"
    id "net.ltgt.apt-idea" version "0.21"

    id 'org.springframework.boot' version '2.3.3.RELEASE'
    id 'com.bmuschko.docker-spring-boot-application' version '6.1.2'
}

allprojects {
    group 'com.metalheart'
    version '0.9.0'

    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'io.spring.dependency-management'

    apply plugin: 'org.springframework.boot'
    apply plugin: 'net.ltgt.apt'
    apply plugin: 'net.ltgt.apt-idea'

    repositories {
        mavenLocal()
        mavenCentral()
    }

    sourceCompatibility = "11"
    targetCompatibility = "11"

    dependencyManagement {
        dependencies {

            //all spring boot dependencies omitted, because applied 'org.springframework.boot' plugin

            dependency "org.springframework.integration:spring-integration-core:$springIntegrationVersion"
            dependency "org.springframework.security:spring-security-oauth2-client:5.2.5.RELEASE"
            dependency "org.springframework.security:spring-security-oauth2-jose:5.2.5.RELEASE"

            dependency "io.springfox:springfox-boot-starter:$swaggerUiVersion"

            // apache
            dependency "org.apache.commons:commons-lang3:$commonsLangVersion"
            dependency "org.apache.commons:commons-collections4:$commonsCollectionsVersion"

            //other
            dependency "org.projectlombok:lombok:$lombokVersion"

            dependency "org.mapstruct:mapstruct-jdk8:$mapstructVersion"
            dependency "org.mapstruct:mapstruct-processor:$mapstructVersion"

            dependency group: "org.postgresql", name: "postgresql", version: "$postgreSqlVersion"

            dependency 'javax.validation:validation-api:2.0.1.Final'

            dependency group: 'ch.qos.logback', name: 'logback-classic', version: "$logbackVersion"
            dependency group: 'ch.qos.logback', name: 'logback-core', version: "$logbackVersion"

            dependency "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
            dependency "com.fasterxml.jackson.module:jackson-module-jaxb-annotations:$jacksonVersion"
            dependency "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jacksonVersion"
        }
    }
}

subprojects {

    dependencies {

        // lombok
        implementation "org.projectlombok:lombok"
        annotationProcessor "org.projectlombok:lombok"
        testAnnotationProcessor "org.projectlombok:lombok"

        // mapstruct
        implementation "org.mapstruct:mapstruct-jdk8"
        annotationProcessor "org.mapstruct:mapstruct-processor"
        testAnnotationProcessor "org.mapstruct:mapstruct-processor"
    }
}

